==> jpnorair/OpenTag/otplatform/stm32l1xx/mpipe_uart_STM32L.c <==
#include "OT_platform.h"
#include "buffers.h"
#include "mpipe.h"
#   define _UARTCLK         (platform_ext.cpu_hz/BOARD_PARAM_APB2CLKDIV)
#   define _UART_IRQ        USART1_IRQn
#   define _DMARX_IRQ       DMA1_Channel5_IRQn
#   define _DMATX_IRQ       DMA1_Channel4_IRQn
#   define _DMARX_IFG       (0x2 << (4*(5-1)))
#   define _DMATX_IFG       (0x2 << (4*(4-1)))
#   define __DMARX_ISR      platform_dma1ch5_isr
#   define __DMATX_ISR      platform_dma1ch4_isr
#   define __UART_CLKON()   do { RCC->APB2ENR |= RCC_APB2Periph_USART1  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB2ENR &= ~RCC_APB2Periph_USART1 } while(0)
#   define _UARTCLK         (platform_ext.cpu_hz/BOARD_PARAM_APB1CLKDIV)
#   define _UART_IRQ        USART2_IRQn
#   define _DMARX_IRQ       DMA1_Channel7_IRQn
#   define _DMATX_IRQ       DMA1_Channel6_IRQn
#   define _DMARX_IFG       (0x2 << (4*(7-1)))
#   define _DMATX_IFG       (0x2 << (4*(6-1)))
#   define __DMARX_ISR      platform_dma1ch7_isr
#   define __DMATX_ISR      platform_dma1ch6_isr
#   define __UART_CLKON()   do { RCC->APB1ENR |= RCC_APB1Periph_USART2  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB1ENR &= ~RCC_APB1Periph_USART2 } while(0)
#   define _UARTCLK         (platform_ext.cpu_hz/BOARD_PARAM_APB1CLKDIV)
#   define _UART_IRQ        USART3_IRQn
#   define _DMARX_IRQ       DMA1_Channel3_IRQn
#   define _DMATX_IRQ       DMA1_Channel2_IRQn
#   define _DMARX_IFG       (0x2 << (4*(3-1)))
#   define _DMATX_IFG       (0x2 << (4*(2-1)))

void sub_uart_portsetup() {
/// The UART GPIOs should be configured as necessary during board and platform
/// initialization.  This function must be called during UART init, and its job
/// is to do any peripheral remapping, interrupt setup, and such things.

    /// Remap MPIPE UART port to its alternate setting (if specified)
#   if (MPIPE_REMAP == ENABLED)
        GPIO_PinRemapConfig(MPIPE_REMAP_TYPE, ENABLE);
#   endif
    
    
    // MPIPE UART Interrupt, not typically used
    //NVIC->IP[(ot_u32)_UART_IRQ]         = PLATFORM_NVIC_IO_GROUP;
    //NVIC->ISER[(ot_u32)(_UART_IRQ>>5)]  = (1 << ((ot_u32)_UART_IRQ & 0x1F));

    // MPipe DMA Interrupt, always used
    NVIC->IP[(ot_u32)_DMARX_IRQ]        = PLATFORM_NVIC_IO_GROUP;
    NVIC->IP[(ot_u32)_DMATX_IRQ]        = PLATFORM_NVIC_IO_GROUP;
    NVIC->ISER[(ot_u32)(_DMARX_IRQ>>5)] = (1 << ((ot_u32)_DMARX_IRQ & 0x1F));
    NVIC->ISER[(ot_u32)(_DMATX_IRQ>>5)] = (1 << ((ot_u32)_DMATX_IRQ & 0x1F));

    /// Set up DMA channels for RX and TX
    MPIPE_DMA_RXCHAN->CCR   =   DMA_DIR_PeripheralSRC       | \
                                DMA_Mode_Normal             | \
                                DMA_PeripheralInc_Disable   | \
                                DMA_MemoryInc_Enable        | \
                                DMA_PeripheralDataSize_Byte | \
                                DMA_MemoryDataSize_Byte     | \
                                DMA_Priority_High           | \
                                DMA_M2M_Disable             | \
                                DMA_IT_TC;
    
    MPIPE_DMA_TXCHAN->CCR   =   DMA_DIR_PeripheralDST       | \
                                DMA_Mode_Normal             | \
                                DMA_PeripheralInc_Disable   | \
                                DMA_MemoryInc_Enable        | \
                                DMA_PeripheralDataSize_Byte | \
                                DMA_MemoryDataSize_Byte     | \
                                DMA_Priority_High           | \
                                DMA_M2M_Disable             | \
                                DMA_IT_TC;
    
//  MPIPE_DMA_RXCHAN->CNDTR = 0;                    //buffer size, filled on usage
//  MPIPE_DMA_TXCHAN->CNDTR = 0;                    //buffer size, filled on usage
//  MPIPE_DMA_RXCHAN->CMAR  = (uint32_t)(NULL);     //data buffer, filled on usage
//  MPIPE_DMA_TXCHAN->CMAR  = (uint32_t)(NULL);     //data buffer, filled on usage
    MPIPE_DMA_RXCHAN->CPAR  = (uint32_t)&MPIPE_UART->DR;
    MPIPE_DMA_TXCHAN->CPAR  = (uint32_t)&MPIPE_UART->DR;
    
    /// UART Setup (RX & TX setup takes place at time of startup)
    _UART_CLKON();
    MPIPE_UART->CR1     = USART_WordLength_8b | USART_Parity_No;  
    MPIPE_UART->CR2     = USART_StopBits_1;
    MPIPE_UART->CR3     = USART_CR3_DMAR | USART_CR3_DMAT;
    MPIPE_UART->GTPR    = 0;
}

ot_int mpipedrv_init(void* port_id) {
/// 1. "port_id" is unused in this impl, and it may be NULL
/// 2. Prepare the HW, which in this case is a UART
/// 3. Set default speed, which in this case is 115200 bps

#if (MPIPE_USE_ACKS)
    tty.priority    = MPIPE_Low;
#endif
    tty.seq.ushort  = 0;          //not actually necessary
    mpipe.state     = MPIPE_Idle;

    alp_init(&mpipe.alp, &dir_in, &dir_out);
    mpipe.alp.inq->back    -= 10;
    mpipe.alp.outq->back   -= 10;

    sub_uart_portsetup();
    mpipedrv_setspeed(MPIPE_115200bps);     //default baud rate

    return 255;
}

void mpipedrv_kill() {
    _DMA_RX(OFF);
    _DMA_TX(OFF);
    _DMA_ALL_CLEAR();
	_UART_CLOSE();
    mpipe.state = MPIPE_Idle;
	q_empty(mpipe.alp.outq);
	mpipe.alp.outq->back -= 10;
}

void mpipedrv_setspeed(mpipe_speed speed) {
    static const ot_u16 br_hssel[4] = { 
        (_UARTCLK_HS/9600), 
        (_UARTCLK_HS/28800), 
        (_UARTCLK_HS/57600), 
        (_UARTCLK_HS/115200)
    };
    
    MPIPE_UART->BRR = br_hssel[speed];
}

void mpipedrv_rxndef(ot_bool blocking, mpipe_priority data_priority) {
#if (MPIPE_USE_ACKS)
    if (data_priority == MPIPE_Ack) {
        tty.priority  = data_priority;
        goto mpipedrv_rxndef_SETUP;
    }
#endif
    if (blocking) {
        mpipedrv_wait();
    }
    if (mpipe.state == MPIPE_Idle) {
        mpipedrv_rxndef_SETUP:
        q_empty(mpipe.alp.inq);
        //mpipe.alp.inq->back -=10;
        _DMA_RX(OFF); 
        _DMA_RXCONFIG(mpipe.alp.inq->front, 6);
        _UART_RXOPEN();
        _DMA_RXTRIGGER();
    }
}

void mpipedrv_isr() {
/// MPipe is state-based.  Depending on the MPipe implementation and the HW
/// implementation of the DMA+UART, state transitions may happen differently.
/// <LI> In typical RX, there is a header detection event that sets-up a second
///      RX process for downloading the rest of the packet.  When the DMA is
///      done, the process completes.  </LI>
/// <LI> For TX, there is a wait-state needed while the HW UART finishes
///      sending the DMA buffered data (two bytes). </LI>
/// <LI> If MPipe does not have HW acks, then software can be used to manage
///      Acks.  In this case, a complete TX process also requires RX'ing an
///      Ack, and a complete RX process requires TX'ing an Ack. </LI>
#if (BOARD_FEATURE_USBCONVERTER != ENABLED)
    ot_u16 crc_result;
#endif

    switch (mpipe.state) {
        case MPIPE_Idle: //note, case doesn't break!
        
        case MPIPE_RxHeader: {
            ot_u8* payload_front;
            ot_int payload_len;
            mpipe.state             = MPIPE_RxPayload;
            payload_len             = mpipe.alp.inq->front[2];
            payload_front           = mpipe.alp.inq->front + 6;
            mpipe.alp.inq->back     = payload_front + payload_len;
            payload_len            += MPIPE_FOOTERBYTES;
            mpipe.alp.inq->length   = payload_len + 6;
            _DMA_RXCONFIG(payload_front, payload_len);
            mpipeevt_rxdetect(30);      ///@todo make dynamic: this is relevant for 115200bps
        }   return;

        case MPIPE_RxPayload: {
            ot_u8* footer;
            footer                  = mpipe.alp.inq->back;
            tty.seq.ubyte[UPPER]    = *footer++;
            tty.seq.ubyte[LOWER]    = *footer;
            
            // CRC is Good (==0) or bad (!=0) Discard the packet if bad
#           if (BOARD_FEATURE_USBCONVERTER != ENABLED)
            crc_result = platform_crc_block(mpipe.alp.inq->front, mpipe.alp.inq->length);
#           endif
            
#           if (MPIPE_USE_ACKS)
            // ACKs must be used when Broadcast mode is off
            // 1. On ACKs, txndef() requires caller to choose state 
            // 2. Copy RX'ed seq number into local seq number
            // 3. Copy NACK/ACK status to 6th byte in NDEF header
            if (tty.priority != MPIPE_Broadcast) {
                mpipe.state = MPIPE_TxAck_Done; //MPIPE_TxAck_Wait;
                sub_txack_header(crc_result);
                mpipedrv_txndef(False, MPIPE_Ack);
                return;
            }
#           endif
        } goto mpipedrv_isr_RXDONE;

        //case MPIPE_TxAck_Wait:
            //MPIPE_UART->IE = UCTXIE;
            //return;

        case MPIPE_TxAck_Done:  // TX'ed an ACK
#           if (MPIPE_USE_ACKS)
            if (mpipe.alp.outq->front[5] != 0) { // TX'ed a NACK
                mpipedrv_rxndef(False, tty.priority);
                mpipe.state = MPIPE_RxHeader;
                return;
            }
            tty.priority = MPIPE_Low;
            goto mpipedrv_isr_RXDONE;
#           endif

        //case MPIPE_Tx_Wait:
            //MPIPE_UART->IE = UCTXIE;
            //return;

        case MPIPE_Tx_Done:
            //MPIPE_UART->IE = 0;
#           if (MPIPE_USE_ACKS)
            if (tty.priority != MPIPE_Broadcast) {
                mpipedrv_rxndef(False, MPIPE_Ack);
                mpipe.state = MPIPE_RxAck;
                return;
            }
#           endif
            goto mpipedrv_isr_TXDONE;  // Broadcast, so no ACK
            
        case MPIPE_RxAck:
#           if (MPIPE_USE_ACKS)
            if (platform_crc_block(mpipe.alp.inq->front, 10) != 0) { //RX'ed NACK
                mpipedrv_txndef(False, tty.priority);
                return;
            }
            goto mpipedrv_isr_TXDONE;  //RX'ed ACK
#           endif
            
       default: mpipedrv_kill();
                mpipe_open();
                return;
    }
    
    // This is a stack-less RX-Done subroutine
    // Close UART, Close MPipe, Tell kernel to start processing
    mpipedrv_isr_RXDONE:
    mpipe.state = MPIPE_Idle;
#   if (BOARD_FEATURE_USBCONVERTER != ENABLED)
    mpipeevt_rxdone((ot_int)crc_result);
#   else
    mpipeevt_rxdone(0);
#   endif
    return;
    
    // This is a stack-less TX-Done subroutine
    // Increment seq, Close MPipe, Tell kernel to disengage
    mpipedrv_isr_TXDONE:
    tty.seq.ushort++;
    mpipe.state = MPIPE_Idle;
    mpipeevt_txdone(2);
}
