==> jpnorair/OpenTag/_backport_todo/otplatform/msp430f5/mpipe_uart_MSP430F5.c <==
#include <otplatform.h>
#include <otlib/buffers.h>
#include <otsys/mpipe.h>
#define MPIPE_USE_ACKS      (BOARD_FEATURE_USBCONVERTER != ENABLED)
#define UART_CLOSE()        (MPIPE_UART->CTL1   |= UCSWRST)
#define UART_OPEN()         (MPIPE_UART->CTL1   &= ~UCSWRST)
#define UART_SET_TXIFG()    (MPIPE_UART->IFG    |= UCTXIFG)
#define UART_CLEAR_TXIFG()  (MPIPE_UART->IFG    &= ~UCTXIFG)
#define UART_SET_RXIFG()    (MPIPE_UART->IFG    |= UCRXIFG)
#define UART_CLEAR_RXIFG()  (MPIPE_UART->IFG    &= ~UCRXIFG)
#define MPIPE_DMA_RXCTL_ON          ( DMA_Mode_Single | \
                                      DMA_DestinationInc_Enable | \
                                      DMA_SourceInc_Disable | \
                                      DMA_DestinationDataSize_Byte | \
                                      DMA_SourceDataSize_Byte | \
                                      DMA_TriggerLevel_RisingEdge | \
                                      0x0014 )
#define MPIPE_DMA_RXCTL_OFF         ( DMA_Mode_Single | \
                                      DMA_DestinationInc_Enable | \
                                      DMA_SourceInc_Disable | \
                                      DMA_DestinationDataSize_Byte | \
                                      DMA_SourceDataSize_Byte | \
                                      DMA_TriggerLevel_RisingEdge | \
                                      0x0004 )

void sub_uart_portsetup() {
    // Get write-access to port mapping regs, update, re-lock
#   if (defined(MPIPE_UART_TXMAP) || defined(MPIPE_UART_RXMAP))
    PM->PWD = 0x2D52;
#       if defined(MPIPE_UART_TXMAP)
        MPIPE_UART_TXMAP = MPIPE_UART_TXSIG;
#       endif
#       if defined(MPIPE_UART_RXMAP)
        MPIPE_UART_RXMAP = MPIPE_UART_RXSIG;
#       endif
    PM->PWD = 0;
#   endif

    MPIPE_UART_PORT->SEL   |= MPIPE_UART_PINS;      // Set pins to alternate function
  //MPIPE_UART_PORT->IE    &= ~MPIPE_UART_PINS;     // disable any interrupts on TX/RX pins
    MPIPE_UART_PORT->IFG   &= ~MPIPE_UART_PINS;     // clear any interrupt flags on TX/RX pins
    MPIPE_UART_PORT->REN   |= MPIPE_UART_RXPIN;     // Set RX pulling resistor
    MPIPE_UART_PORT->DOUT  |= MPIPE_UART_RXPIN;     // Set RX to pull-up
    MPIPE_UART_PORT->DDIR  &= ~MPIPE_UART_RXPIN;    // Set RX to input
    MPIPE_UART_PORT->DDIR  |= MPIPE_UART_TXPIN;     // Set TX to output
    MPIPE_UART_PORT->DS    |= MPIPE_UART_TXPIN;     // Set drive strength to high on TX pin
    
#   if ((MPIPE_UART_RTSPIN != NULL) && (MPIPE_UART_CTSPIN != NULL))
        MPIPE_CTS_PORT->DDIR   |= MPIPE_CTS_PIN;
      //MPIPE_RTS_PORT->DDIR   &= ~MPIPE_RTS_PIN;
        MPIPE_RTS_PORT->IE     |= MPIPE_RTS_PIN;
#   endif

    MPIPE_UART->IE   = 0;
}

ot_int mpipedrv_init(void* port_id) {
/// 0. "port_id" is unused in this impl, and it may be NULL
/// 1. Set all signal callbacks to NULL, and initialize other variables.
/// 2. Prepare the HW, which in this case is a UART
/// 3. Set default speed, which in this case is 115200 bps

#if (MCU_FEATURE(MEMCPYDMA) != ENABLED)
    BOARD_DMA_COMMON_INIT();
#endif

#if (MPIPE_USE_ACKS)
    tty.priority    = MPIPE_Low;
#endif
    tty.seq.ushort  = 0;          //not actually necessary
    mpipe.state     = MPIPE_Idle;

    alp_init(&mpipe.alp, &otmpin, &otmpout);
    mpipe.alp.inq->back    -= 10;
    mpipe.alp.outq->back   -= 10;

    sub_uart_portsetup();
    mpipedrv_setspeed(MPIPE_115200bps);     //default baud rate

    return 255;
}

void mpipedrv_kill() {
    MPIPE_DMAEN(OFF);
	UART_CLOSE();
    mpipe.state = MPIPE_Idle;
	q_empty(mpipe.alp.outq);
	mpipe.alp.outq->back -= 10;
}

void mpipedrv_setspeed(mpipe_speed speed) {
    ot_u8* baud_data;
    /// You will need to change this baud rate matrix if
    /// you change the bit clock from SMCLK @ 6 MHz
    /// Order is [ BR0, BR1, MCTL, ... ]
    /// BR1:0 = Floor(BitCLK/BaudRate)
    /// MCTL  = Round(((BitCLK/BaudRate) - Floor(BitCLK/BaudRate)) * 8) << 1
    static const ot_u8 baud_matrix[] = { 0x71, 0x02, 0x00, 0, \
                                         0xD0, 0x00, 0x06, 0, \
                                         0x68, 0x00, 0x02, 0, \
                                         0x34, 0x00, 0x02, 0  };

#   if (MCU_FEATURE(MPIPEDMA) == ENABLED)
        MPIPE_DMAEN(OFF);
#   else
#       error "Mpipe requires a DMA in this implementation"
#   endif

    UART_CLOSE();

    // Parity off, LSB-first, 8N1, async uart
    // Use SMCLK and keep UART reset
    MPIPE_UART->CTL0 = 0;
    MPIPE_UART->CTL1 = 0x81;
    //MPIPE_UART->IE   = 0;
    //MPIPE_UART->IFG  = 0;
    baud_data        = (ot_u8*)&baud_matrix[speed << 2];
    MPIPE_UART->BR0  = *baud_data++;
    MPIPE_UART->BR1  = *baud_data++;
    MPIPE_UART->MCTL = *baud_data;
}

void mpipedrv_rxndef(ot_bool blocking, mpipe_priority data_priority) {
#if (MPIPE_USE_ACKS)
    if (data_priority == MPIPE_Ack) {
        tty.priority  = data_priority;
        goto mpipedrv_rxndef_SETUP;
    }
#endif
    if (blocking) {
        mpipedrv_wait();
    }
    if (mpipe.state == MPIPE_Idle) {
        mpipedrv_rxndef_SETUP:
        MPIPE_DMAEN(OFF);
        UART_CLOSE();

#       if (MPIPE_DMANUM == 0)
        DMA->CTL0  |= MPIPE_UART_RXTRIG;
#       elif (MPIPE_DMANUM == 1)
        DMA->CTL0  |= (MPIPE_UART_RXTRIG << 8);
#       elif (MPIPE_DMANUM == 2)
        DMA->CTL1   = MPIPE_UART_RXTRIG;
#       endif

        q_empty(mpipe.alp.inq);
        //mpipe.alp.inq->back -=10;
        MPIPE_DMA_RXCONFIG(mpipe.alp.inq->front, 6, ON);
        UART_OPEN();
        UART_CLEAR_RXIFG();
    }
}

void mpipedrv_isr() {
/// MPipe is state-based.  Depending on the MPipe implementation and the HW
/// implementation of the DMA+UART, state transitions may happen differently.
/// <LI> In typical RX, there is a header detection event that sets-up a second
///      RX process for downloading the rest of the packet.  When the DMA is
///      done, the process completes.  </LI>
/// <LI> For TX, there is a wait-state needed while the HW UART finishes
///      sending the DMA buffered data (two bytes). </LI>
/// <LI> If MPipe does not have HW acks, then software can be used to manage
///      Acks.  In this case, a complete TX process also requires RX'ing an
///      Ack, and a complete RX process requires TX'ing an Ack. </LI>
#if (BOARD_FEATURE_USBCONVERTER != ENABLED)
    ot_u16 crc_result;
#endif

    switch (mpipe.state) {
        case MPIPE_Idle: //note, case doesn't break!

        case MPIPE_RxHeader: {
            ot_u8* payload_front;
            ot_int payload_len;
            mpipe.state             = MPIPE_RxPayload;
            payload_len             = mpipe.alp.inq->front[2];
            payload_front           = mpipe.alp.inq->front + 6;
            mpipe.alp.inq->back     = payload_front + payload_len;
            payload_len            += MPIPE_FOOTERBYTES;
         //#mpipe.alp.inq->length   = payload_len + 6;
            mpipe_alp.inq->putcursor= payload_len + 6;
            MPIPE_DMA_RXCONFIG(payload_front, payload_len, ON);
            mpipeevt_rxdetect(30);      ///@todo make dynamic: this is relevant for 115200bps
        }   return;

        case MPIPE_RxPayload: {
            ot_u8* footer;
            footer                  = mpipe.alp.inq->back;
            tty.seq.ubyte[UPPER]    = *footer++;
            tty.seq.ubyte[LOWER]    = *footer;
            
            // CRC is Good (==0) or bad (!=0) Discard the packet if bad
#           if (BOARD_FEATURE_USBCONVERTER != ENABLED)
            crc_result = crc16drv_block(mpipe.alp.inq->front, q_length(mpipe.alp.inq));
#           endif
            
#           if (MPIPE_USE_ACKS)
            // ACKs must be used when Broadcast mode is off
            // 1. On ACKs, tx() requires caller to choose state 
            // 2. Copy RX'ed seq number into local seq number
            // 3. Copy NACK/ACK status to 6th byte in NDEF header
            if (tty.priority != MPIPE_Broadcast) {
                mpipe.state = MPIPE_TxAck_Done; //MPIPE_TxAck_Wait;
                sub_txack_header(crc_result);
                mpipedrv_tx(False, MPIPE_Ack);
                return;
            }
#           endif
        } goto mpipedrv_isr_RXDONE;

        //case MPIPE_TxAck_Wait:
            //MPIPE_UART->IE = UCTXIE;
            //return;

        case MPIPE_TxAck_Done:  // TX'ed an ACK
#           if (MPIPE_USE_ACKS)
            if (mpipe.alp.outq->front[5] != 0) { // TX'ed a NACK
                mpipedrv_rxndef(False, tty.priority);
                mpipe.state = MPIPE_RxHeader;
                return;
            }
            tty.priority = MPIPE_Low;
            goto mpipedrv_isr_RXDONE;
#           endif

        //case MPIPE_Tx_Wait:
            //MPIPE_UART->IE = UCTXIE;
            //return;

        case MPIPE_Tx_Done:
            //MPIPE_UART->IE = 0;
#           if (MPIPE_USE_ACKS)
            if (tty.priority != MPIPE_Broadcast) {
                mpipedrv_rxndef(False, MPIPE_Ack);
                mpipe.state = MPIPE_RxAck;
                return;
            }
#           endif
            goto mpipedrv_isr_TXDONE;  // Broadcast, so no ACK
            
        case MPIPE_RxAck:
#           if (MPIPE_USE_ACKS)
            if (crc16drv_block(mpipe.alp.inq->front, 10) != 0) { //RX'ed NACK
                mpipedrv_tx(False, tty.priority);
                return;
            }
            goto mpipedrv_isr_TXDONE;  //RX'ed ACK
#           endif
            
       default: mpipedrv_kill();
                mpipe_open();
                return;
    }
    
    // This is a stack-less RX-Done subroutine
    // Close UART, Close MPipe, Tell kernel to start processing
    mpipedrv_isr_RXDONE:
    mpipe.state = MPIPE_Idle;
#   if (BOARD_FEATURE_USBCONVERTER != ENABLED)
    mpipeevt_rxdone((ot_int)crc_result);
#   else
    mpipeevt_rxdone(0);
#   endif
    return;
    
    // This is a stack-less TX-Done subroutine
    // Increment seq, Close MPipe, Tell kernel to disengage
    mpipedrv_isr_TXDONE:
    tty.seq.ushort++;
    mpipe.state = MPIPE_Idle;
    mpipeevt_txdone(2);
}
